--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <p></p>
         <div class="lower">
 	        <a class="keep-playing-button">Keep going</a>
-          <a class="retry-button">Try again</a>
+          <a class="retry-button">Próbáld újra</a>
         </div>
       </div>
 
